Added paginated tasks in profile and start of history creating